--- a/first/index.html
+++ b/first/index.html
@@ -1,1 +1,18 @@
-<!-- Put your HTML HERE, make sure to connect your style.css sheet -->
+<!DOCTYPE html>
+<html>
+  <head>
+
+    <title>Roe Day2 Project</title>
+    <link rel="stylesheet" href="style.css"/>
+  </head>
+  <body>
+<div id="color-container">
+
+  <div class="color color-left"></div>
+    <div class="color color-right"></div>
+
+<div class="top top-header"></div>
+
+
+  </body>
+</html>
